--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "1.0.0",
     "license": "MIT",
     "scripts": {
-        "dev": "next",
+        "dev": "nodemon server/server.js --watch server",
         "dev-express": "nodemon server/server.js --watch server",
         "build": "next build",
-        "start": "next start",
-        "lint": "eslint '**/*.js' '**/*.jsx'",
+        "start": "node server/server.js",
+        "lint": "eslint components pages lib server",
         "test": "jest --coverage"
     },
     "jest": {
